--- a/.editorconfig
+++ b/.editorconfig
@@ -4,5 +4,6 @@ root = true
 indent_style = space
 indent_size = 2
 insert_final_newline = true
-trim_trailin_whitespace = true
 
+[{*.kt,*.kts}]
+indent_size = 4
